[package]
name = "sunrise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
eframe = "0.17.0"
walkdir = "2"
directories = "4.0.1"
itertools = "0.10.2"
nom = "7.0.0"
regex = "1.6.0"
webbrowser = "0.7.1"
semver = "1.0.13"
serde_json = "1.0.83"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
